<resources>
    <string name="app_name">Bookarest</string>
    <string name="button_login">Log in</string>
    <string name="button_signup">Sign up</string>
    <string name="terms_of_service">By tapping Sign Up, you agree to Bookarest\'s Terms of Service and Privacy Policy.</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="tv_forgot_password">Forgot password?</string>
    <string name="tv_not_a_member">Not a member? Sign up</string>
    <string name="signup_hint_firstname">First name</string>
    <string name="signup_hint_lastname">Last name</string>
    <string name="tv_already_a_member">Already a member? Log in</string>
    <string name="terms_of_service_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra ipsum nunc aliquet bibendum enim facilisis gravida neque convallis. Cras pulvinar mattis nunc sed blandit libero volutpat sed. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Sit amet venenatis urna cursus eget. Semper eget duis at tellus at urna condimentum mattis. Aliquet sagittis id consectetur purus ut. Fames ac turpis egestas maecenas. Justo eget magna fermentum iaculis eu non. Accumsan in nisl nisi scelerisque. Sit amet volutpat consequat mauris nunc congue nisi.  Nibh tellus molestie nunc non blandit massa enim nec dui. Aliquam sem et tortor consequat id porta nibh. Mollis aliquam ut porttitor leo a diam sollicitudin tempor id. At risus viverra adipiscing at in tellus. Sit amet risus nullam eget felis eget. Vitae suscipit tellus mauris a diam. Non curabitur gravida arcu ac tortor dignissim convallis. Amet luctus venenatis lectus magna fringilla urna porttitor rhoncus. Amet consectetur adipiscing elit ut aliquam purus. Risus nullam eget felis eget nunc lobortis mattis aliquam faucibus.  Sed adipiscing diam donec adipiscing tristique. Condimentum mattis pellentesque id nibh tortor id aliquet lectus proin. Molestie a iaculis at erat pellentesque adipiscing commodo elit. Suspendisse sed nisi lacus sed viverra tellus. Venenatis a condimentum vitae sapien pellentesque habitant morbi tristique senectus. Tellus id interdum velit laoreet id donec ultrices. Neque gravida in fermentum et sollicitudin ac orci phasellus. Habitant morbi tristique senectus et netus et malesuada fames ac. Tellus molestie nunc non blandit massa enim nec. Massa tincidunt dui ut ornare lectus sit amet. Augue neque gravida in fermentum et sollicitudin ac orci phasellus. Ac turpis egestas maecenas pharetra convallis.  Pretium nibh ipsum consequat nisl vel pretium. Lacus vestibulum sed arcu non odio euismod lacinia. Non quam lacus suspendisse faucibus interdum posuere lorem. Vulputate sapien nec sagittis aliquam malesuada. Blandit turpis cursus in hac. Facilisis mauris sit amet massa vitae tortor. Ut morbi tincidunt augue interdum velit euismod in. Bibendum arcu vitae elementum curabitur vitae nunc sed velit dignissim. Ullamcorper morbi tincidunt ornare massa eget egestas. Aliquet risus feugiat in ante metus dictum at tempor commodo. Potenti nullam ac tortor vitae. Tellus rutrum tellus pellentesque eu tincidunt tortor. Ac tortor vitae purus faucibus ornare suspendisse. Urna duis convallis convallis tellus id interdum velit laoreet id. Molestie at elementum eu facilisis. Eu lobortis elementum nibh tellus molestie nunc non blandit. Congue quisque egestas diam in arcu cursus. Congue eu consequat ac felis donec et odio pellentesque diam. Sed euismod nisi porta lorem mollis aliquam ut porttitor leo. Malesuada fames ac turpis egestas.  Suspendisse ultrices gravida dictum fusce ut placerat orci. Ullamcorper morbi tincidunt ornare massa eget egestas purus viverra accumsan. Sit amet luctus venenatis lectus magna fringilla urna. Nibh cras pulvinar mattis nunc. In mollis nunc sed id semper risus. Pretium nibh ipsum consequat nisl vel pretium lectus quam. Nunc faucibus a pellentesque sit amet porttitor eget dolor morbi. Nec ullamcorper sit amet risus nullam eget. Facilisi cras fermentum odio eu. Et tortor at risus viverra adipiscing at in. Nisl tincidunt eget nullam non nisi est. Odio eu feugiat pretium nibh ipsum. Vel pretium lectus quam id leo. Morbi leo urna molestie at elementum eu. Feugiat vivamus at augue eget arcu. Tempus imperdiet nulla malesuada pellentesque elit. Dictum fusce ut placerat orci nulla pellentesque dignissim enim.  Malesuada proin libero nunc consequat interdum varius sit. Varius morbi enim nunc faucibus a pellentesque. Velit sed ullamcorper morbi tincidunt ornare. Mauris in aliquam sem fringilla ut. Massa eget egestas purus viverra accumsan in. Aliquet nec ullamcorper sit amet risus. Sollicitudin tempor id eu nisl nunc mi ipsum faucibus vitae. Quam nulla porttitor massa id neque aliquam vestibulum morbi blandit. In dictum non consectetur a erat nam. Est sit amet facilisis magna etiam tempor. Duis ut diam quam nulla porttitor. Mauris ultrices eros in cursus turpis massa tincidunt dui. Eget mauris pharetra et ultrices neque ornare aenean. Auctor eu augue ut lectus arcu.  Volutpat lacus laoreet non curabitur gravida arcu ac tortor dignissim. Aliquam ultrices sagittis orci a scelerisque purus semper. Quis enim lobortis scelerisque fermentum dui faucibus. Amet consectetur adipiscing elit ut. Arcu felis bibendum ut tristique et egestas quis. Sagittis nisl rhoncus mattis rhoncus urna. Ac turpis egestas integer eget aliquet nibh praesent tristique magna. Faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis. Adipiscing at in tellus integer feugiat scelerisque varius morbi enim. Facilisis volutpat est velit egestas. Id neque aliquam vestibulum morbi blandit cursus risus at ultrices. Nunc sed velit dignissim sodales ut eu. Venenatis urna cursus eget nunc scelerisque viverra mauris. Tortor aliquam nulla facilisi cras. Cursus metus aliquam eleifend mi. Vulputate odio ut enim blandit volutpat maecenas. Vitae congue eu consequat ac felis donec et odio.  Egestas purus viverra accumsan in nisl nisi scelerisque eu. Montes nascetur ridiculus mus mauris. Ornare quam viverra orci sagittis eu volutpat. Ornare aenean euismod elementum nisi quis eleifend quam. Pellentesque nec nam aliquam sem et tortor consequat id. Blandit volutpat maecenas volutpat blandit aliquam etiam. Eget aliquet nibh praesent tristique magna sit amet purus gravida. Nunc aliquet bibendum enim facilisis gravida neque convallis a. Purus sit amet volutpat consequat mauris nunc. In iaculis nunc sed augue. At tempor commodo ullamcorper a lacus vestibulum sed arcu non. Sagittis nisl rhoncus mattis rhoncus urna neque. Mauris pharetra et ultrices neque ornare aenean. Nascetur ridiculus mus mauris vitae ultricies leo. Viverra orci sagittis eu volutpat odio facilisis mauris. Nisi quis eleifend quam adipiscing vitae proin.  At elementum eu facilisis sed odio morbi. Nisl tincidunt eget nullam non. Sollicitudin tempor id eu nisl. Ac turpis egestas integer eget. Integer malesuada nunc vel risus. Ut faucibus pulvinar elementum integer enim neque volutpat ac. Tempus urna et pharetra pharetra. Quisque id diam vel quam. Vitae aliquet nec ullamcorper sit amet risus. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus.  Nisl purus in mollis nunc. Placerat in egestas erat imperdiet sed euismod nisi porta. Tellus integer feugiat scelerisque varius morbi enim nunc faucibus a. Purus gravida quis blandit turpis cursus in hac habitasse. Amet facilisis magna etiam tempor orci eu. Volutpat consequat mauris nunc congue nisi vitae suscipit tellus mauris. Arcu non odio euismod lacinia at quis. Fermentum iaculis eu non diam. Aliquam purus sit amet luctus venenatis. Et molestie ac feugiat sed lectus vestibulum mattis. Sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper. Curabitur vitae nunc sed velit dignissim sodales ut eu. Malesuada proin libero nunc consequat interdum. Nulla facilisi morbi tempus iaculis. Non pulvinar neque laoreet suspendisse interdum. Vitae turpis massa sed elementum tempus egestas sed. Et molestie ac feugiat sed lectus.</string>
    <string name="dlg_terms_of_service_title"><![CDATA[Terms of service & Privacy policy]]></string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_my_books">My books</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_settings">Settings</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_my_books">My books</string>
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fr_profile_this_is_you">This is you.</string>
    <string name="edit">Edit profile</string>
    <string name="tv_profile_name">fname lname</string>
    <string name="tv_profile_email">Email:</string>
    <string name="tv_profile_email_value">someone@address.com</string>
    <string name="tv_profile_phone_number">Phone number:</string>
    <string name="tv_profile_phone_number_value">+40xxxxxxxxx</string>
    <string name="tv_profile_sex">Sex:</string>
    <string name="tv_profile_sex_value">-</string>
    <string name="tv_profile_birthdate">Birthdate:</string>
    <string name="tv_profile_birthdate_value">01-Jan-1900</string>
    <string name="tv_profile_country">Country:</string>
    <string name="tv_profile_country_value">-</string>
    <string name="tv_profile_favourite_genres">Favourite genres:</string>
    <string name="tv_my_books_want_to_read">Want to read</string>
    <string name="tv_my_books_currently_reading">Currently reading</string>
    <string name="tv_my_books_read">Read</string>
    <string name="button_settings_about">About</string>
    <string name="tv_home_welcome_back">Welcome back!</string>
    <string name="tv_home_you_are_currently_reading">You are currently reading:</string>
    <string name="tv_home_cr_title">Title</string>
    <string name="tv_home_cr_author">Author</string>
    <string name="tv_home_progress_percentage">0%</string>
    <string name="button_home_update_progress">Update progress</string>
    <string name="interesting_fact_intro">Here is an interesting fact about you:</string>
    <string name="fact1">You have read a total of 0 books.</string>
    <string name="interesting_fact_intro2">And here is another one:</string>
    <string name="fact2">You have read a total of 0 pages.</string>
    <string name="comment">Knowledge is power pal.</string>
    <string name="about">App developed in 2021 by Narcis-Ionel Damian and Rares-Mihai David.</string>
    <string name="about_title">About</string>
    <string name="button_my_books_edit">Edit my books</string>
    <string name="rb_wtr">Want to read</string>
    <string name="rb_cr">Currently reading</string>
    <string name="rb_r">Read</string>
    <string name="remember_email">Remember Email</string>
    <string name="remember_password">Remember Password</string>
</resources>