<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment_profile"
        android:background="@color/colorBackground">

        <TextView
            android:id="@+id/tv_profile_this_is_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/fr_profile_this_is_you"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:src="@drawable/default_profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="150dp"
            app:layout_constraintHeight_min="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="150dp"
            app:layout_constraintWidth_min="150dp"
            android:background="@drawable/profile_picture_shape"
            android:scaleType="fitXY"
            android:foreground="@drawable/profile_picture_shape"/>


        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/tv_profile_name"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture"
            />

        //email

        <TextView
            android:id="@+id/tv_profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/tv_profile_email"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_name"
            />

        <TextView
            android:id="@+id/tv_profile_email_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/tv_profile_email_value"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />

        //phone nr

        <TextView
            android:id="@+id/tv_profile_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/tv_profile_phone_number"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_email" />

        <TextView
            android:id="@+id/tv_profile_phone_number_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/tv_profile_phone_number_value"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_email_value" />

        //sex

        <TextView
            android:id="@+id/tv_profile_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/tv_profile_sex"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_phone_number" />

        <TextView
            android:id="@+id/tv_profile_sex_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/tv_profile_sex_value"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_phone_number_value" />


        //birthdate

        <TextView
            android:id="@+id/tv_profile_birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/tv_profile_birthdate"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_sex" />

        <TextView
            android:id="@+id/tv_profile_birthdate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/tv_profile_birthdate_value"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_sex_value"/>

        //country

        <TextView
            android:id="@+id/tv_profile_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/tv_profile_country"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_birthdate"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_profile_country_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/tv_profile_country_value"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_birthdate_value"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corners"
            android:fontFamily="@font/montserrat"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/edit"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/colorBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_country_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>