<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_login"
    android:background="@color/colorBackground"
    style="@style/AppTheme"
    >


    <ImageView
        android:id="@+id/iv_logo_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>


    //Email

    <EditText
        android:id="@+id/et_login_email"
        style="@style/LoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="64dp"
        android:hint="@string/login_hint_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_login">

    </EditText>

    //Password

    <EditText
        android:id="@+id/et_login_password"
        style="@style/LoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:hint="@string/login_hint_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_login_email"
        android:inputType="textPassword"
        >

    </EditText>


    <Button
        android:id="@+id/button_login_login"
        style="@style/FirstActivityButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/montserrat"
        android:text="@string/button_login"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_login_password"
        tools:layout_editor_absoluteY="540dp">

    </Button>

    <TextView
        android:id="@+id/tv_not_a_member"
        style="@style/SimpleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_not_a_member"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login_login"
        android:clickable="true">

    </TextView>

    <CheckBox
        android:id="@+id/cb_remember_email"
        android:buttonTint="@color/colorFirstActivityButtons"
        android:fontFamily="@font/montserrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_email"
        app:layout_constraintTop_toBottomOf="@id/et_login_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="140dp"/>

    <CheckBox
        android:id="@+id/cb_remember_password"
        android:buttonTint="@color/colorFirstActivityButtons"
        android:fontFamily="@font/montserrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_password"
        app:layout_constraintTop_toBottomOf="@+id/cb_remember_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="115dp"
        android:layout_marginTop="5dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>