<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/book_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/book_item_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/book_item_title"
        android:textSize="15dp"/>

    <RadioGroup
        android:id="@+id/rg_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/book_item_author"
        android:orientation="vertical"
>


        <RadioButton
            android:id="@+id/rb_wtr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_wtr"
            android:fontFamily="@font/montserrat"
            />

        <RadioButton
            android:id="@+id/rb_cr"
            android:fontFamily="@font/montserrat"
            android:text="@string/rb_cr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <RadioButton
            android:id="@+id/rb_r"
            android:fontFamily="@font/montserrat"
            android:text="@string/rb_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>